# github-integration

./: .gitignore  404.html  index.html  pyproject.toml
.github/: CHANGELOG.md  README.md  TODO.md
.github/workflows/: publish_mkdocs.yml
Codebase/__init__.py/: index.html
Codebase/api/__init__.py/: index.html
Codebase/api/v1/__init__.py/: index.html
Codebase/api/v1/project.py/: index.html
Codebase/api/v1/user.py/: index.html
Codebase/main.py/: index.html
Codebase/schemas/error.py/: index.html
Codebase/schemas/payload.py/: index.html
Codebase/schemas/project.py/: index.html
Codebase/schemas/user.py/: index.html
Codebase/services/__init__.py/: index.html
Codebase/services/project.py/: index.html
Codebase/services/user.py/: index.html
Codebase/utils.py/: index.html
app/: main.py  utils.py
app/api/v1/: project.py  user.py
app/schemas/: error.py  payload.py  project.py  user.py
app/services/: project.py  user.py
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/Codebase/: __init__.py.md  main.py.md  utils.py.md
documentation/docs/Codebase/api/: __init__.py.md
documentation/docs/Codebase/api/v1/: __init__.py.md  project.py.md  user.py.md
documentation/docs/Codebase/schemas/: error.py.md  payload.py.md  project.py.md  user.py.md
documentation/docs/Codebase/services/: __init__.py.md  project.py.md  user.py.md
search/: search_index.json
