[project]
name = "github-integration"
version = "1.0.0"
description = "Código-fonte do Microsserviço de Integração GitHub API do CollabHubBR"
readme = { content-type = "text/markdown", file = ".github/README.md" }
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "LucasGonc", email = "lucasgoncsilva04@gmail.com" }]
maintainers = [{ name = "LucasGonc", email = "lucasgoncsilva04@gmail.com" }]

dependencies = [
    "fastapi[standard]>=0.115.13",
]

[dependency-groups]
dev = [
    "mosheh>=1.3.4",
    "mypy>=1.16.1",
    "ruff>=0.12.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
dev = "uv run fastapi dev app/main.py"
lint = "uv run ruff check; uv run ruff format; uv run mypy app"
doc = "uv run mosheh -root ./app/ --repo-name github-integration --repo-url https://github.com/CollabHubBR/github-integration --readme-path .github/README.md --verbose 3 --output documentation"

# Internal Commands
workflow_create_doc = "uv run mosheh -root ../app/ --repo-name github-integration --repo-url https://github.com/CollabHubBR/github-integration --readme-path ../.github/README.md --verbose 3 --output ."

[tool.ruff]
line-length = 88
exclude = [".venv"]
fix = true

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["I", "E", "UP", "F"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[tool.mypy]
strict = true
